glpk-4.6/include/glplpx.h

#define lpx_create_prob       glp_lpx_create_prob
#define lpx_add_rows          glp_lpx_add_rows
#define lpx_add_cols          glp_lpx_add_cols
#define lpx_delete_prob       glp_lpx_delete_prob
#define lpx_check_name        glp_lpx_check_name         
#define lpx_clear_mat         glp_lpx_clear_mat          
#define lpx_del_items         glp_lpx_del_items          
#define lpx_get_class         glp_lpx_get_class
#define lpx_get_col_name      glp_lpx_get_col_name
#define lpx_get_col_kind      glp_lpx_get_col_kind
#define lpx_get_status        glp_lpx_get_status
#define lpx_get_dual_stat     glp_lpx_get_dual_stat
#define lpx_get_col_bnds      glp_lpx_get_col_bnds       
#define lpx_get_col_coef      glp_lpx_get_col_coef       
#define lpx_get_col_mark      glp_lpx_get_col_mark       
#define lpx_get_col_info      glp_lpx_get_col_info       
#define lpx_get_ips_col       glp_lpx_get_ips_col        
#define lpx_get_ips_obj       glp_lpx_get_ips_obj        
#define lpx_get_int_parm      glp_lpx_get_int_parm
#define lpx_adv_basis         glp_lpx_adv_basis
#define lpx_check_kkt         glp_lpx_check_kkt
#define lpx_eval_tab_row      glp_lpx_eval_tab_row
#define lpx_eval_tab_col      glp_lpx_eval_tab_col
#define lpx_dual_ratio_test   glp_lpx_dual_ratio_test
typedef struct LPX LPX;
struct LPX { int none_; };
#define LPX_OPT         180   
#define LPX_FEAS        181   
#define LPX_INFEAS      182   
#define LPX_NOFEAS      183   
#define LPX_UNBND       184   
#define LPX_UNDEF       185   
#define LPX_E_OK        200   
#define LPX_E_EMPTY     201   
#define LPX_E_BADB      202   
#define LPX_E_INFEAS    203   
#define LPX_E_FAULT     204   
#define LPX_E_OBJLL     205   
#define LPX_E_OBJUL     206   
#define LPX_E_ITLIM     207   
#define LPX_E_TMLIM     208   
#define LPX_E_NOFEAS    209   
#define LPX_E_INSTAB    210   
#define LPX_E_SING      211   
#define LPX_E_NOCONV    212   
#define LPX_E_NOPFS     213   
#define LPX_E_NODFS     214   
#define LPX_K_MSGLEV    300   
#define LPX_K_SCALE     301   
#define LPX_K_DUAL      302   
#define LPX_K_PRICE     303   
#define LPX_K_RELAX     304   
#define LPX_K_TOLBND    305   
#define LPX_K_TOLDJ     306   
#define LPX_K_TOLPIV    307   
#define LPX_K_ROUND     308   
#define LPX_K_OBJLL     309   
#define LPX_K_OBJUL     310   
#define LPX_K_ITLIM     311   
#define LPX_K_ITCNT     312   
#define LPX_K_TMLIM     313   
#define LPX_K_OUTFRQ    314   
#define LPX_K_OUTDLY    315   
#define LPX_K_BRANCH    316   
#define LPX_K_BTRACK    317   
#define LPX_K_TOLINT    318   
#define LPX_K_TOLOBJ    319   
#define LPX_K_MPSINFO   320   
#define LPX_K_MPSOBJ    321   
#define LPX_K_MPSORIG   322   
#define LPX_K_MPSWIDE   323   
#define LPX_K_MPSFREE   324   
#define LPX_K_MPSSKIP   325   
#define LPX_K_LPTORIG   326   
#define LPX_K_PRESOL    327   
typedef struct LPXKKT LPXKKT;
struct LPXKKT
{     
      double pe_ae_max;
      int    pe_ae_row;
      double pe_re_max;
      int    pe_re_row;
      int    pe_quality;
      double pb_ae_max;
      int    pb_ae_ind;
      double pb_re_max;
      int    pb_re_ind;
      int    pb_quality;
      double de_ae_max;
      int    de_ae_col;
      double de_re_max;
      int    de_re_col;
      int    de_quality;
      double db_ae_max;
      int    db_ae_ind;
      double db_re_max;
      int    db_re_ind;
      int    db_quality;
      double cs_ae_max;
      int    cs_ae_ind;
      double cs_re_max;
      int    cs_re_ind;
      int    cs_quality;
};
LPX *lpx_create_prob(void);
int lpx_add_rows(LPX *lp, int nrs);
int lpx_add_cols(LPX *lp, int ncs);
void lpx_delete_prob(LPX *lp);
int lpx_check_name(char *name);
void lpx_load_mat(LPX *lp,
      void *info, double (*mat)(void *info, int *i, int *j));
void lpx_clear_mat(LPX *lp);
void lpx_del_items(LPX *lp);
int lpx_get_class(LPX *lp);
char *lpx_get_col_name(LPX *lp, int j);
int lpx_get_col_kind(LPX *lp, int j);
int lpx_get_status(LPX *lp);
int lpx_get_dual_stat(LPX *lp);
void lpx_get_col_bnds(LPX *lp, int j, int *typx, double *lb,
      double *ub);
double lpx_get_col_coef(LPX *lp, int j);
int lpx_get_col_mark(LPX *lp, int j);
void lpx_get_col_info(LPX *lp, int j, int *tagx, double *vx,
      double *dx);
void lpx_get_ips_col(LPX *lp, int j, double *vx, double *dx);
double lpx_get_ips_obj(LPX *lp);
int lpx_get_int_parm(LPX *lp, int parm);
void lpx_adv_basis(LPX *lp);
void lpx_check_kkt(LPX *lp, int scaled, LPXKKT *kkt);
int lpx_eval_tab_row(LPX *lp, int k, int ind[], double val[]);
int lpx_eval_tab_col(LPX *lp, int k, int ind[], double val[]);
int lpx_dual_ratio_test(LPX *lp, int len, int ind[], double val[],
      int how, double tol);