glpk-4.6/contrib/deli/Glpk4.PAS

// ---------------------------------------------------------------------
// Copyright (C) 2003 Andrew Makhorin <mao@mai2.rcnet.ru>, Department
// for Applied Informatics, Moscow Aviation Institute, Moscow, Russia.
// All rights reserved.
//
// Author: Ivo van Baren, Operations Research specialist,
//         i.van.baren@freeler.nl
//
// This file is a part of GLPK (GNU Linear Programming Kit).
//
// GLPK is free software; you can redistribute it and/or modify it
// under the terms of the GNU General Public License as published by
// the Free Software Foundation; either version 2, or (at your option)
// any later version.
//
// GLPK is distributed in the hope that it will be useful, but WITHOUT
// ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
// or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public
// License for more details.
//
// You should have received a copy of the GNU General Public License
// along with GLPK; see the file COPYING. If not, write to the Free
// Software Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA
// 02111-1307, USA.
// --------------------------------------------------------------------

Unit GLPK4;

Interface

Const
   LPX_LP          =  100;   {* linear programming (LP) *}
   LPX_MIP         =  101;   {* mixed integer programming (MIP) *}
   LPX_FR          =  110;   {* free variable:  -inf <  x[k] < +inf  *}
   LPX_LO          =  111;   {* lower bound:    l[k] <= x[k] < +inf  *}
   LPX_UP          =  112;   {* upper bound:    -inf <  x[k] <= u[k] *}
   LPX_DB          =  113;   {* double bound:   l[k] <= x[k] <= u[k] *}
   LPX_FX          =  114;   {* fixed variable: l[k]  = x[k]  = u[k] *}
   LPX_MIN         =  120;   {* minimization *}
   LPX_MAX         =  121;   {* maximization *}
   LPX_B_UNDEF     =  130;   {* current basis is undefined *}
   LPX_B_VALID     =  131;   {* current basis is valid *}
   LPX_P_UNDEF     =  132;   {* primal status is undefined *}
   LPX_P_FEAS      =  133;   {* solution is primal feasible *}
   LPX_P_INFEAS    =  134;   {* solution is primal infeasible *}
   LPX_P_NOFEAS    =  135;   {* no primal feasible solution exists *}
   LPX_D_UNDEF     =  136;   {* dual status is undefined *}
   LPX_D_FEAS      =  137;   {* solution is dual feasible *}
   LPX_D_INFEAS    =  138;   {* solution is dual infeasible *}
   LPX_D_NOFEAS    =  139;   {* no dual feasible solution exists *}
   LPX_BS          =  140;   {* basic variable *}
   LPX_NL          =  141;   {* non-basic variable on lower bound *}
   LPX_NU          =  142;   {* non-basic variable on upper bound *}
   LPX_NF          =  143;   {* non-basic free variable *}
   LPX_NS          =  144;   {* non-basic fixed variable *}
   LPX_T_UNDEF     =  150;   {* solution is undefined *}
   LPX_T_OPT       =  151;   {* solution is optimal *}
   LPX_CV          =  160;   {* continuous variable *}
   LPX_IV          =  161;   {* integer variable *}
   LPX_I_UNDEF     =  170;   {* integer status is undefined *}
   LPX_I_OPT       =  171;   {* solution is integer optimal *}
   LPX_I_FEAS      =  172;   {* solution is integer feasible *}
   LPX_I_NOFEAS    =  173;   {* no integer solution exists *}
{* status codes reported by the routine lpx_get_status: *}
   LPX_OPT         =  180;   {* optimal *}
   LPX_FEAS        =  181;   {* feasible *}
   LPX_INFEAS      =  182;   {* infeasible *}
   LPX_NOFEAS      =  183;   {* no feasible *}
   LPX_UNBND       =  184;   {* unbounded *}
   LPX_UNDEF       =  185;   {* undefined *}
{* exit codes returned by the simplex-based solver routines: *}
   LPX_E_OK        =  200;   {* success *}
   LPX_E_EMPTY     =  201;   {* empty problem *}
   LPX_E_BADB      =  202;   {* invalid initial basis *}
   LPX_E_INFEAS    =  203;   {* infeasible initial solution *}
   LPX_E_FAULT     =  204;   {* unable to start the search *}
   LPX_E_OBJLL     =  205;   {* objective lower limit reached *}
   LPX_E_OBJUL     =  206;   {* objective upper limit reached *}
   LPX_E_ITLIM     =  207;   {* iterations limit exhausted *}
   LPX_E_TMLIM     =  208;   {* time limit exhausted *}
   LPX_E_NOFEAS    =  209;   {* no feasible solution *}
   LPX_E_INSTAB    =  210;   {* numerical instability *}
   LPX_E_SING      =  211;   {* problems with basis matrix *}
   LPX_E_NOCONV    =  212;   {* no convergence (interior) *}
   LPX_E_NOPFS     =  213;   {* no primal feas. sol. (LP presolver) *}
   LPX_E_NODFS     =  214;   {* no dual feas. sol.   (LP presolver) *}
{* control parameter identifiers: *}
   LPX_K_MSGLEV    =  300;   {* lp->msg_lev *}
   LPX_K_SCALE     =  301;   {* lp->scale *}
   LPX_K_DUAL      =  302;   {* lp->dual *}
   LPX_K_PRICE     =  303;   {* lp->price *}
   LPX_K_RELAX     =  304;   {* lp->relax *}
   LPX_K_TOLBND    =  305;   {* lp->tol_bnd *}
   LPX_K_TOLDJ     =  306;   {* lp->tol_dj *}
   LPX_K_TOLPIV    =  307;   {* lp->tol_piv *}
   LPX_K_ROUND     =  308;   {* lp->round *}
   LPX_K_OBJLL     =  309;   {* lp->obj_ll *}
   LPX_K_OBJUL     =  310;   {* lp->obj_ul *}
   LPX_K_ITLIM     =  311;   {* lp->it_lim *}
   LPX_K_ITCNT     =  312;   {* lp->it_cnt *}
   LPX_K_TMLIM     =  313;   {* lp->tm_lim *}
   LPX_K_OUTFRQ    =  314;   {* lp->out_frq *}
   LPX_K_OUTDLY    =  315;   {* lp->out_dly *}
   LPX_K_BRANCH    =  316;   {* lp->branch *}
   LPX_K_BTRACK    =  317;   {* lp->btrack *}
   LPX_K_TOLINT    =  318;   {* lp->tol_int *}
   LPX_K_TOLOBJ    =  319;   {* lp->tol_obj *}
   LPX_K_MPSINFO   =  320;   {* lp->mps_info *}
   LPX_K_MPSOBJ    =  321;   {* lp->mps_obj *}
   LPX_K_MPSORIG   =  322;   {* lp->mps_orig *}
   LPX_K_MPSWIDE   =  323;   {* lp->mps_wide *}
   LPX_K_MPSFREE   =  324;   {* lp->mps_free *}
   LPX_K_MPSSKIP   =  325;   {* lp->mps_skip *}
   LPX_K_LPTORIG   =  326;   {* lp->lpt_orig *}
   LPX_K_PRESOL    =  327;   {* lp->presol *}

   MaxIntArray     = 1000000;
   MaxFloatArray   = 1000000;

Type
 PLPX     = Pointer;
 PLPXKKT  = Pointer;

 PIntArray      = ^IntArray;
 IntArray       = Array[0..MaxIntArray] Of Integer;

 PFloatArray    = ^FloatArray;
 FloatArray     = Array[0..MaxFloatArray] Of Double;


{* void lpx_add_cols(LPX *lp, int ncs); *}
{* add new columns to LP problem object *}
Procedure lpx_add_cols(lp : PLPX; ncs : Integer);
cdecl; external 'glpk-4.dll' index 177;

{* void lpx_add_rows(LPX *lp, int nrs); *}
{* add new rows to LP problem object *}
Procedure lpx_add_rows(lp : PLPX; nrs : Integer);
cdecl; external 'glpk-4.dll' index 178;

{* void lpx_adv_basis(LPX *lp); *}
{* build advanced initial basis *}
Procedure lpx_adv_basis(lp : PLPX);
cdecl; external 'glpk-4.dll' index 179;

{* void lpx_check_kkt(LPX *lp, int scaled, LPXKKT *kkt); *}
{* check Karush-Kuhn-Tucker conditions *}
Procedure lpx_check_kkt(lp : PLPX; scaled : Integer; kkt : PLPXKKT);
cdecl; external 'glpk-4.dll' index 180;

{* int lpx_check_name(char *name); *}
{* check correctness of symbolic name *}
Function lpx_check_name(name : String):Integer;
cdecl; external 'glpk-4.dll' index 181;

{* void lpx_clear_mat(LPX *lp); *}
{* clear rows and columns of the constraint matrix *}
Procedure lpx_clear_mat(lp : PLPX);
cdecl; external 'glpk-4.dll' index 182;

{* LPX *lpx_create_prob(void); *}
{* create LP problem object *}
Function lpx_create_prob:PLPX;
cdecl; external 'glpk-4.dll' index 183;

{* void lpx_del_items(LPX *lp); *}
{* remove rows and columns from LP problem object *}
Procedure lpx_del_items(lp : PLPX);
cdecl; external 'glpk-4.dll' index 184;

{* void lpx_delete_prob(LPX *lp); *}
{* delete LP problem object *}
Procedure lpx_delete_prob(lp : PLPX);
cdecl; external 'glpk-4.dll' index 185;

{* int lpx_dual_opt(LPX *lp); *}
{* find optimal solution (dual simplex) *}
Function lpx_dual_opt(lp : PLPX):Integer;
cdecl; external 'glpk-4.dll' index 186;

{* int lpx_dual_ratio_test(LPX *lp, int len, int ndx[], double val[], int how, double tol); *}
{* perform dual ratio test *}
Function lpx_dual_ratio_test(lp : PLPX; len : Integer; ndx : PIntArray; val : PFloatArray; how : Integer; tol : Double):Integer;
cdecl; external 'glpk-4.dll' index 187;

{* void lpx_estim_obj_chg(LPX *lp, int k, double dn_val, double up_val, double *dn_chg, double *up_chg, int ndx[], double val[]); *}
{* estimate obj. changes for down- and up-branch *}
Procedure lpx_estim_obj_chg(lp : PLPX; k : Integer; dn_val : Double; up_val : Double; Var dn_chg : Double; Var up_chg : Double; ndx : PIntArray; val : PFloatArray);
cdecl; external 'glpk-4.dll' index 188;

{* double lpx_eval_activity(LPX *lp, int len, int ndx[], double val[]); *}
{* compute activity of explicitly specified row *}
Function lpx_eval_activity(lp : PLPX; len : Integer; ndx : PIntArray; val : PFloatArray):Double;
cdecl; external 'glpk-4.dll' index 189;

{* double lpx_eval_red_cost(LPX *lp, int len, int ndx[], double val[]); *}
{* compute red. cost of explicitly specified column *}
Function lpx_eval_red_cost(lp : PLPX; len : Integer; ndx : PIntArray; val : PFloatArray):Double;
cdecl; external 'glpk-4.dll' index 190;

{* int lpx_eval_tab_col(LPX *lp, int k, int ndx[], double val[]); *}
{* compute column of the simplex table *}
Function lpx_eval_tab_col(lp : PLPX; k : Integer; ndx : PIntArray; val : PFloatArray):Integer;
cdecl; external 'glpk-4.dll' index 191;

{* int lpx_eval_tab_row(LPX *lp, int k, int ndx[], double val[]); *}
{* compute row of the simplex table *}
Function lpx_eval_tab_row(lp : PLPX; k : Integer; ndx : PIntArray; val : PFloatArray):Integer;
cdecl; external 'glpk-4.dll' index 192;

{* int lpx_get_class(LPX *lp); *}
{* query problem class *}
Function lpx_get_class(lp : PLPX):Integer;
cdecl; external 'glpk-4.dll' index 193;

{* void lpx_get_col_bnds(LPX *lp, int j, int *typx, double *lb, double *ub); *}
{* obtain column bounds *}
Procedure lpx_get_col_bnds(lp : PLPX; j : Integer; Var typx : Integer; Var lb : Double; Var ub : Double);
cdecl; external 'glpk-4.dll' index 194;

{* double lpx_get_col_coef(LPX *lp, int j); *}
{* obtain column objective coefficient *}
Function lpx_get_col_coef(lp : PLPX; j : Integer):Double;
cdecl; external 'glpk-4.dll' index 195;

{* void lpx_get_col_info(LPX *lp, int j, int *tagx, double *vx, double *dx); *}
{* obtain column solution information *}
Procedure lpx_get_col_info(lp : PLPX; j : Integer; Var tagx : Integer; Var vx : Double; Var dx : Double);
cdecl; external 'glpk-4.dll' index 196;

{* int lpx_get_col_kind(LPX *lp, int j); *}
{* query column kind *}
Function lpx_get_col_kind(lp : PLPX; j : Integer):Integer;
cdecl; external 'glpk-4.dll' index 197;

{* int lpx_get_col_mark(LPX *lp, int j); *}
{* determine column mark *}
Function lpx_get_col_mark(lp : PLPX; j : Integer):Integer;
cdecl; external 'glpk-4.dll' index 198;

{* char *lpx_get_col_name(LPX *lp, int j); *}
{* obtain column name *}
Function lpx_get_col_name(lp : PLPX; j : Integer):PChar;
cdecl; external 'glpk-4.dll' index 199;

{* int lpx_get_dual_stat(LPX *lp); *}
{* query dual status of basic solution *}
Function lpx_get_dual_stat(lp : PLPX):Integer;
cdecl; external 'glpk-4.dll' index 200;

{* int lpx_get_int_parm(LPX *lp, int parm); *}
{* query integer control parameter *}
Function lpx_get_int_parm(lp : PLPX; parm : Integer):Integer;
cdecl; external 'glpk-4.dll' index 201;

{* void lpx_get_ips_col(LPX *lp, int j, double *vx, double *dx); *}
{* obtain column interior point solution *}
Procedure lpx_get_ips_col(lp : PLPX; j : Integer; Var vx : Double; Var dx : Double);
cdecl; external 'glpk-4.dll' index 202;

{* double lpx_get_ips_obj(LPX *lp); *}
{* obtain interior point value of the obj. function *}
Function lpx_get_ips_obj(lp : PLPX):Double;
cdecl; external 'glpk-4.dll' index 203;
